--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Ignore VS Code workspace settings
-.vscode/
 
 # Logs
 *.log
@@ -10,6 +8,8 @@
 
 # Folders
 build/
+.vscode/
+.github/
 
 # Files
 sketch.yaml.disabled
